--- a/PSData/Assignment05/Assignment05/Assignment05.fsproj
+++ b/PSData/Assignment05/Assignment05/Assignment05.fsproj
@@ -31,6 +31,7 @@
       <Content Include="TypedFun\README.TXT" />
       <Compile Include="TypedFun\TypedFun.fs" />
       <Content Include="Assignment_5.md" />
+      <Compile Include="Exercises.fs" />
     </ItemGroup>
 
 </Project>
